--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,11 @@
-[package]
-name = "wm"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["crates/lucky", "crates/config"]
+default_members = ["crates/lucky"]
+resolver = "2"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace.dependencies]
+config = { path = "crates/config" }
 
-[dependencies]
-anyhow = "1.0.81"
-tokio = { version = "1.37.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-xcb = { version = "1.3.0", features = ["xkb"] }
+anyhow = "1.0.81"
