--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ config = { path = "crates/config" }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 anyhow = "1.0.81"
+xkbcommon = { version = "0.7.0", features = ["x11"] }
+xcb = { version = "1.3.0", features = ["xkb", "x11", "xlib_xcb", "as-raw-xcb-connection"] }
