--- a/crates/lucky/Cargo.toml
+++ b/crates/lucky/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+config.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 anyhow.workspace = true
+xkbcommon.workspace = true
+xcb.workspace = true
 
-xcb = { version = "1.3.0", features = ["xkb", "x11", "xlib_xcb", "as-raw-xcb-connection"] }
-xkbcommon = { version = "0.7.0", features = ["x11"] }
