feat: better error handling ofr config parsing

--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,9 @@
 leader = "Mod1"
 workspaces = 10
 
-border_width = 23
+border_width = 4
 border_color = "#252525"
+gap = 4
 
 [[actions]]
 modifiers = ["Leader"]
