feat: now we support argument passing to commands

--- a/config.toml
+++ b/config.toml
@@ -60,3 +60,8 @@ action = "MoveRight"
 modifiers = ["Leader"]
 key = "Enter"
 command = "wezterm"
+
+[[commands]]
+modifiers = ["Leader"]
+key = "d"
+command = "rofi -show drun"
