--- a/crates/lucky/Cargo.toml
+++ b/crates/lucky/Cargo.toml
@@ -10,3 +10,6 @@ tracing-subscriber.workspace = true
 anyhow.workspace = true
 xkbcommon.workspace = true
 xcb.workspace = true
+
+[dev-dependencies]
+rand = "0.8.5"
