--- a/crates/lucky/Cargo.toml
+++ b/crates/lucky/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 config.workspace = true
 tracing.workspace = true
+tracing-appender.workspace = true
 tracing-subscriber.workspace = true
 anyhow.workspace = true
 xkbcommon.workspace = true
