--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [workspace]
 members = ["crates/lucky", "crates/config"]
-default_members = ["crates/lucky"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -11,4 +10,4 @@ tracing-subscriber = "0.3.18"
 tracing-appender = "0.2.3"
 anyhow = "1.0.81"
 xkbcommon = { version = "0.7.0", features = ["x11"] }
-xcb = { version = "1.3.0", features = ["xkb", "x11", "xlib_xcb", "as-raw-xcb-connection", "randr"] }
+xcb = { version = "1.3.0", features = ["xkb", "x11", "xlib_xcb", "as-raw-xcb-connection", "randr", "xinput"] }
